# GammonEstimate

./: README.md  app.py  app_pip.py  load_xg.ipynb  pyproject.toml  requirements.txt
data/: xg_data.pkl
notebook/: cube_action.ipynb  cube_action_xg_data.ipynb
src/: chart.py  param.py  xg.py
src/test/: test_param.py  test_xg.py
tests/: test_param.py  test_xg.py
