[tool.poetry]
name = "gammon-estimate"
version = "0.1.0"
description = ""
authors = ["Masahiro Kisono <mkisono@gmail.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
pandas = "^2.1.3"
xgdatatools = {version = "^0.0.1", source = "testpypi"}
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
