[tool.poetry]
name = "gammon-estimate"
version = "0.1.0"
description = ""
authors = ["Masahiro Kisono <mkisono@gmail.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
streamlit-backgammon = "^0.0.2"
plotly = "^5.18.0"
xgdatatools = "^0.0.1"
slider-with-buttons = "^0.0.5"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watch = "^4.2.0"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
